modules/server-endpoints/language-server/src/main/java/org/wso2/carbon/identity/parser/JavaScriptParser.java
package org.wso2.carbon.identity.parser; // Generated from /home/wathsara/IdeaProjects/ParserTesting/JavaScriptParser
// .g4 by ANTLR 4.7.2

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaScriptParser extends JavaScriptBaseParser {
	public static final int
			MultiLineComment = 1, SingleLineComment = 2, RegularExpressionLiteral = 3, OpenBracket = 4,
			CloseBracket = 5, OpenParen = 6, CloseParen = 7, OpenBrace = 8, CloseBrace = 9,
			SemiColon = 10, Comma = 11, Assign = 12, QuestionMark = 13, Colon = 14, Ellipsis = 15,
			Dot = 16, PlusPlus = 17, MinusMinus = 18, Plus = 19, Minus = 20, BitNot = 21, Not = 22,
			Multiply = 23, Divide = 24, Modulus = 25, RightShiftArithmetic = 26, LeftShiftArithmetic = 27,
			RightShiftLogical = 28, LessThan = 29, MoreThan = 30, LessThanEquals = 31, GreaterThanEquals = 32,
			Equals_ = 33, NotEquals = 34, IdentityEquals = 35, IdentityNotEquals = 36, BitAnd = 37,
			BitXOr = 38, BitOr = 39, And = 40, Or = 41, MultiplyAssign = 42, DivideAssign = 43,
			ModulusAssign = 44, PlusAssign = 45, MinusAssign = 46, LeftShiftArithmeticAssign = 47,
			RightShiftArithmeticAssign = 48, RightShiftLogicalAssign = 49, BitAndAssign = 50,
			BitXorAssign = 51, BitOrAssign = 52, ARROW = 53, NullLiteral = 54, BooleanLiteral = 55,
			DecimalLiteral = 56, HexIntegerLiteral = 57, OctalIntegerLiteral = 58, OctalIntegerLiteral2 = 59,
			BinaryIntegerLiteral = 60, Break = 61, Do = 62, Instanceof = 63, Typeof = 64, Case = 65,
			Else = 66, New = 67, Var = 68, Catch = 69, Finally = 70, Return = 71, Void = 72, Continue = 73,
			For = 74, Switch = 75, While = 76, Debugger = 77, Function = 78, This = 79, With = 80,
			Default = 81, If = 82, Throw = 83, Delete = 84, In = 85, Try = 86, Class = 87, Enum = 88,
			Extends = 89, Super = 90, Const = 91, Export = 92, Import = 93, Implements = 94, Let = 95,
			Private = 96, Public = 97, Interface = 98, Package = 99, Protected = 100, Static = 101,
			Yield = 102, Identifier = 103, StringLiteral = 104, TemplateStringLiteral = 105,
			WhiteSpaces = 106, LineTerminator = 107, HtmlComment = 108, CDataComment = 109,
			UnexpectedCharacter = 110;
	public static final int
			RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3,
			RULE_statementList = 4, RULE_variableStatement = 5, RULE_variableDeclarationList = 6,
			RULE_variableDeclaration = 7, RULE_emptyStatement = 8, RULE_expressionStatement = 9,
			RULE_ifStatement = 10, RULE_iterationStatement = 11, RULE_varModifier = 12,
			RULE_continueStatement = 13, RULE_breakStatement = 14, RULE_returnStatement = 15,
			RULE_withStatement = 16, RULE_switchStatement = 17, RULE_caseBlock = 18,
			RULE_caseClauses = 19, RULE_caseClause = 20, RULE_defaultClause = 21,
			RULE_labelledStatement = 22, RULE_throwStatement = 23, RULE_tryStatement = 24,
			RULE_catchProduction = 25, RULE_finallyProduction = 26, RULE_debuggerStatement = 27,
			RULE_functionDeclaration = 28, RULE_classDeclaration = 29, RULE_classTail = 30,
			RULE_classElement = 31, RULE_methodDefinition = 32, RULE_generatorMethod = 33,
			RULE_formalParameterList = 34, RULE_formalParameterArg = 35, RULE_lastFormalParameterArg = 36,
			RULE_functionBody = 37, RULE_sourceElements = 38, RULE_arrayLiteral = 39,
			RULE_elementList = 40, RULE_lastElement = 41, RULE_objectLiteral = 42,
			RULE_propertyAssignment = 43, RULE_propertyName = 44, RULE_arguments = 45,
			RULE_lastArgument = 46, RULE_expressionSequence = 47, RULE_singleExpression = 48,
			RULE_arrowFunctionParameters = 49, RULE_arrowFunctionBody = 50, RULE_assignmentOperator = 51,
			RULE_literal = 52, RULE_numericLiteral = 53, RULE_identifierName = 54,
			RULE_reservedWord = 55, RULE_keyword = 56, RULE_getter = 57, RULE_setter = 58,
			RULE_eos = 59;
	public static final String[] ruleNames = makeRuleNames();
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
	}

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public JavaScriptParser(TokenStream input) {

		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	private static String[] makeRuleNames() {

		return new String[]{
				"program", "sourceElement", "statement", "block", "statementList", "variableStatement",
				"variableDeclarationList", "variableDeclaration", "emptyStatement", "expressionStatement",
				"ifStatement", "iterationStatement", "varModifier", "continueStatement",
				"breakStatement", "returnStatement", "withStatement", "switchStatement",
				"caseBlock", "caseClauses", "caseClause", "defaultClause", "labelledStatement",
				"throwStatement", "tryStatement", "catchProduction", "finallyProduction",
				"debuggerStatement", "functionDeclaration", "classDeclaration", "classTail",
				"classElement", "methodDefinition", "generatorMethod", "formalParameterList",
				"formalParameterArg", "lastFormalParameterArg", "functionBody", "sourceElements",
				"arrayLiteral", "elementList", "lastElement", "objectLiteral", "propertyAssignment",
				"propertyName", "arguments", "lastArgument", "expressionSequence", "singleExpression",
				"arrowFunctionParameters", "arrowFunctionBody", "assignmentOperator",
				"literal", "numericLiteral", "identifierName", "reservedWord", "keyword",
				"getter", "setter", "eos"
		};
	}

	private static String[] makeLiteralNames() {

		return new String[]{
				null, null, null, null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'",
				"','", "'='", "'?'", "':'", "'...'", "'.'", "'++'", "'--'", "'+'", "'-'",
				"'~'", "'!'", "'*'", "'/'", "'%'", "'>>'", "'<<'", "'>>>'", "'<'", "'>'",
				"'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'",
				"'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='",
				"'>>>='", "'&='", "'^='", "'|='", "'=>'", "'null'", null, null, null,
				null, null, null, "'break'", "'do'", "'instanceof'", "'typeof'", "'case'",
				"'else'", "'new'", "'var'", "'catch'", "'finally'", "'return'", "'void'",
				"'continue'", "'for'", "'switch'", "'while'", "'debugger'", "'function'",
				"'this'", "'with'", "'default'", "'if'", "'throw'", "'delete'", "'in'",
				"'try'", "'class'", "'enum'", "'extends'", "'super'", "'const'", "'export'",
				"'import'", "'implements'", "'let'", "'private'", "'public'", "'interface'",
				"'package'", "'protected'", "'static'", "'yield'"
		};
	}

	private static String[] makeSymbolicNames() {

		return new String[]{
				null, "MultiLineComment", "SingleLineComment", "RegularExpressionLiteral",
				"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace",
				"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon",
				"Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot",
				"Not", "Multiply", "Divide", "Modulus", "RightShiftArithmetic", "LeftShiftArithmetic",
				"RightShiftLogical", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals",
				"Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd",
				"BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign",
				"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign",
				"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign",
				"ARROW", "NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral",
				"OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral",
				"Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var",
				"Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While",
				"Debugger", "Function", "This", "With", "Default", "If", "Throw", "Delete",
				"In", "Try", "Class", "Enum", "Extends", "Super", "Const", "Export",
				"Import", "Implements", "Let", "Private", "Public", "Interface", "Package",
				"Protected", "Static", "Yield", "Identifier", "StringLiteral", "TemplateStringLiteral",
				"WhiteSpaces", "LineTerminator", "HtmlComment", "CDataComment", "UnexpectedCharacter"
		};
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {

		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {

		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {

		return "JavaScriptParser.g4";
	}

	@Override
	public String[] getRuleNames() {

		return ruleNames;
	}

	@Override
	public String getSerializedATN() {

		return _serializedATN;
	}

	@Override
	public ATN getATN() {

		return _ATN;
	}

	public final ProgramContext program() throws RecognitionException {

		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(121);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
					case 1: {
						setState(120);
						sourceElements();
					}
					break;
				}
				setState(123);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SourceElementContext sourceElement() throws RecognitionException {

		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(126);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
					case 1: {
						setState(125);
						match(Export);
					}
					break;
				}
				setState(128);
				statement();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StatementContext statement() throws RecognitionException {

		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(130);
					block();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(131);
					variableStatement();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(132);
					emptyStatement();
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(133);
					classDeclaration();
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(134);
					expressionStatement();
				}
				break;
				case 6:
					enterOuterAlt(_localctx, 6);
				{
					setState(135);
					ifStatement();
				}
				break;
				case 7:
					enterOuterAlt(_localctx, 7);
				{
					setState(136);
					iterationStatement();
				}
				break;
				case 8:
					enterOuterAlt(_localctx, 8);
				{
					setState(137);
					continueStatement();
				}
				break;
				case 9:
					enterOuterAlt(_localctx, 9);
				{
					setState(138);
					breakStatement();
				}
				break;
				case 10:
					enterOuterAlt(_localctx, 10);
				{
					setState(139);
					returnStatement();
				}
				break;
				case 11:
					enterOuterAlt(_localctx, 11);
				{
					setState(140);
					withStatement();
				}
				break;
				case 12:
					enterOuterAlt(_localctx, 12);
				{
					setState(141);
					labelledStatement();
				}
				break;
				case 13:
					enterOuterAlt(_localctx, 13);
				{
					setState(142);
					switchStatement();
				}
				break;
				case 14:
					enterOuterAlt(_localctx, 14);
				{
					setState(143);
					throwStatement();
				}
				break;
				case 15:
					enterOuterAlt(_localctx, 15);
				{
					setState(144);
					tryStatement();
				}
				break;
				case 16:
					enterOuterAlt(_localctx, 16);
				{
					setState(145);
					debuggerStatement();
				}
				break;
				case 17:
					enterOuterAlt(_localctx, 17);
				{
					setState(146);
					functionDeclaration();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final BlockContext block() throws RecognitionException {

		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(149);
				match(OpenBrace);
				setState(151);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
					case 1: {
						setState(150);
						statementList();
					}
					break;
				}
				setState(153);
				match(CloseBrace);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StatementListContext statementList() throws RecognitionException {

		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statementList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(156);
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
						case 1: {
							{
								setState(155);
								statement();
							}
						}
						break;
						default:
							throw new NoViableAltException(this);
					}
					setState(158);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				} while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final VariableStatementContext variableStatement() throws RecognitionException {

		VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(160);
				varModifier();
				setState(161);
				variableDeclarationList();
				setState(162);
				eos();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final VariableDeclarationListContext variableDeclarationList() throws RecognitionException {

		VariableDeclarationListContext _localctx = new VariableDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclarationList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(164);
				variableDeclaration();
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(165);
								match(Comma);
								setState(166);
								variableDeclaration();
							}
						}
					}
					setState(171);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {

		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(175);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case Identifier: {
						setState(172);
						match(Identifier);
					}
					break;
					case OpenBracket: {
						setState(173);
						arrayLiteral();
					}
					break;
					case OpenBrace: {
						setState(174);
						objectLiteral();
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
				setState(179);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
					case 1: {
						setState(177);
						match(Assign);
						setState(178);
						singleExpression(0);
					}
					break;
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EmptyStatementContext emptyStatement() throws RecognitionException {

		EmptyStatementContext _localctx = new EmptyStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_emptyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(181);
				match(SemiColon);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {

		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expressionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(183);
				if (!(this.notOpenBraceAndNotFunction()))
					throw new FailedPredicateException(this, "this.notOpenBraceAndNotFunction()");
				setState(184);
				expressionSequence();
				setState(185);
				eos();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final IfStatementContext ifStatement() throws RecognitionException {

		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(187);
				match(If);
				setState(188);
				match(OpenParen);
				setState(189);
				expressionSequence();
				setState(190);
				match(CloseParen);
				setState(191);
				statement();
				setState(194);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
					case 1: {
						setState(192);
						match(Else);
						setState(193);
						statement();
					}
					break;
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final IterationStatementContext iterationStatement() throws RecognitionException {
